# racer-tracer

./: .gitignore  LICENSE  README.md  default.nix  flake.nix  racer-tracer.nix
.github/workflows/: ci.yaml
nix/: sources.json
racer-tracer/: Cargo.toml  config.yml
racer-tracer/src/: aabb.rs  background_color.rs  bvh_node.rs  camera.rs  config.rs  data_bus.rs  error.rs  gbuffer.rs  geometry.rs  geometry_creation.rs  image.rs  image_action.rs  image_buffer.rs  key_inputs.rs  main.rs  material.rs  ray.rs  render.rs  renderer.rs  scene.rs  scene_controller.rs  shared_scene.rs  terminal.rs  texture.rs  tone_map.rs  util.rs  vec3.rs
racer-tracer/src/geometry/: box.rs  moving_sphere.rs  rotate_y.rs  sphere.rs  translate.rs  xy_rect.rs  xz_rect.rs  yz_rect.rs
racer-tracer/src/image_action/: none.rs  png.rs  wait_for_signal.rs
racer-tracer/src/material/: dialectric.rs  diffuse_light.rs  lambertian.rs  metal.rs
racer-tracer/src/renderer/: cpu.rs  cpu_scaled.rs  denoised.rs  image.rs
racer-tracer/src/scene/: none.rs  random.rs  sandbox.rs  two_spheres.rs  yml.rs
racer-tracer/src/scene_controller/: interactive.rs
racer-tracer/src/texture/: checkered.rs  image.rs  noise.rs  solid_color.rs
racer-tracer/src/tone_map/: aces.rs  hable.rs  none.rs  reinhard.rs
resources/scenes/: clown.yml  cornell_box.yml  emissive.yml  noise_and_textures.yml  three_balls.yml  two_balls.yml
