[package]
name = "racer-tracer"
version = "0.1.0"
authors = ["Sakarias Johansson <sakarias.johansson@goodbyekansas.com>"]
edition = "2021"

[dependencies]
minifb = "0.23"
thiserror = "1"
futures = "0.3"
rand = "0.8.5"
rayon = "1.6.1"
structopt = "0.3"
num_cpus = "1.15.0"
synchronoise = "1.0.1"
config = "0.13.3"
serde = { version = "1", features = ["derive"] }
